stage 1 of store

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/forms": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ngrx/operators": "^18.0.0",
     "@ngrx/signals": "^18.0.0-rc.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
