--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
             "browser": "src/main.ts",
             "outputPath": "dist/demo",
             "scripts": [],
-            "styles": ["src/global_styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/cyan-orange.css",
+              "src/global_styles.css"
+            ],
             "tsConfig": "tsconfig.app.json"
           }
         },
